fix tests for changes to `JobBatchQueue`