@@ -1,7 +1,7 @@
 package gov.cms.dpc.queue.service;
 
 import ca.uhn.fhir.context.FhirContext;
-import edu.emory.mathcs.backport.java.util.Collections;
+import gov.cms.dpc.common.utils.NPIUtil;
 import gov.cms.dpc.queue.MemoryBatchQueue;
 import gov.cms.dpc.queue.exceptions.DataRetrievalException;
 import gov.cms.dpc.queue.models.JobQueueBatch;
@@ -19,12 +19,18 @@ import org.mockito.MockitoAnnotations;
 import org.mockito.Spy;
 
 import java.io.File;
+import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
-public class DataServiceTest{
+public class DataServiceTest {
 
     private final UUID aggregatorID = UUID.randomUUID();
+    private final UUID orgID = UUID.randomUUID();
+    private final UUID providerID = UUID.randomUUID();
+    private final UUID patientID = UUID.randomUUID();
+    private final String orgNPI = NPIUtil.generateNPI();
+    private final String providerNPI = NPIUtil.generateNPI();
     private final String exportPath = "/tmp";
     private DataService dataService;
     private File tmpFile;
@@ -37,10 +43,11 @@ public class DataServiceTest{
 
     @BeforeEach
     public void before() {
-        MockitoAnnotations.initMocks(this);
+        MockitoAnnotations.openMocks(this);
         dataService = new DataService(queue, fhirContext, exportPath, 1);
     }
 
+    @SuppressWarnings("ResultOfMethodCallIgnored")
     @AfterEach
     public void after() {
         Mockito.reset(queue);
@@ -51,71 +58,56 @@ public class DataServiceTest{
 
     @Test
     public void whenGetJobBatchesThrowsException() {
-        UUID orgID = UUID.randomUUID();
-        UUID providerID = UUID.randomUUID();
-        UUID patientID = UUID.randomUUID();
         ResourceType resourceType = ResourceType.ExplanationOfBenefit;
 
         Mockito.doThrow(new RuntimeException("error")).when(queue).getJobBatches(Mockito.any(UUID.class));
 
         Assertions.assertThrows(DataRetrievalException.class, () -> {
-            dataService.retrieveData(orgID, providerID, Collections.singletonList(patientID.toString()), resourceType);
+            dataService.retrieveData(orgID, providerID, orgNPI, providerNPI, List.of(patientID.toString()), resourceType);
         });
     }
 
     @Test
     public void whenGetJobBatchesReturnsFailedJob() throws IllegalAccessException {
-        UUID orgID = UUID.randomUUID();
-        UUID providerID = UUID.randomUUID();
-        UUID patientID = UUID.randomUUID();
         ResourceType resourceType = ResourceType.ExplanationOfBenefit;
 
         workJob(true, resourceType);
         Assertions.assertThrows(DataRetrievalException.class, () -> {
-            dataService.retrieveData(orgID, providerID, Collections.singletonList(patientID.toString()), resourceType);
+            dataService.retrieveData(orgID, providerID, orgNPI, providerNPI, List.of(patientID.toString()), resourceType);
         });
     }
 
     @Test
     public void whenGetJobBatchesReturnsCompletedJobWithResourceType() throws IllegalAccessException {
-        UUID orgID = UUID.randomUUID();
-        UUID providerID = UUID.randomUUID();
-        UUID patientID = UUID.randomUUID();
         ResourceType resourceType = ResourceType.ExplanationOfBenefit;
 
         workJob(false, resourceType);
-        Resource resource = dataService.retrieveData(orgID, providerID, Collections.singletonList(patientID.toString()), resourceType);
+        Resource resource = dataService.retrieveData(orgID, providerID, orgNPI, providerNPI, List.of(patientID.toString()), resourceType);
         Assertions.assertTrue(resource instanceof Bundle);
     }
 
     @Test
     public void whenGetJobBatchesReturnsCompletedJobWithOperationOutcome() throws IllegalAccessException {
-        UUID orgID = UUID.randomUUID();
-        UUID providerID = UUID.randomUUID();
-        UUID patientID = UUID.randomUUID();
         ResourceType resourceType = ResourceType.ExplanationOfBenefit;
 
         workJob(false, ResourceType.OperationOutcome);
-        Resource resource = dataService.retrieveData(orgID, providerID, Collections.singletonList(patientID.toString()), resourceType);
+        Resource resource = dataService.retrieveData(orgID, providerID, orgNPI, providerNPI, List.of(patientID.toString()), resourceType);
         Assertions.assertTrue(resource instanceof OperationOutcome);
     }
 
     @Test
     public void whenPassingInNoResourceTypes() throws IllegalAccessException {
-        UUID orgID = UUID.randomUUID();
-        UUID providerID = UUID.randomUUID();
-        UUID patientID = UUID.randomUUID();
-
         workJob(false, ResourceType.ExplanationOfBenefit);
         Assertions.assertThrows(DataRetrievalException.class, () -> {
-            dataService.retrieveData(orgID, providerID, Collections.singletonList(patientID.toString()));
+            dataService.retrieveData(orgID, providerID, orgNPI, providerNPI, List.of(patientID.toString()));
         });
     }
 
+    @SuppressWarnings("OptionalGetWithoutIsPresent")
     private void workJob(boolean failBatch, ResourceType resourceType) throws IllegalAccessException {
         Mockito.doAnswer((mock) -> {
             Optional<JobQueueBatch> workBatch = queue.claimBatch(aggregatorID);
-            while (workBatch.get().fetchNextPatient(aggregatorID).isPresent()) {
+            while (workBatch.flatMap(batch -> batch.fetchNextPatient(aggregatorID)).isPresent()) {
                 queue.completePartialBatch(workBatch.get(), aggregatorID);
             }
             if (failBatch) {
@@ -125,7 +117,7 @@ public class DataServiceTest{
                 workBatch.get().addJobQueueFile(resourceType, 0, 1);
                 queue.completeBatch(workBatch.get(), aggregatorID);
             }
-            return Collections.singletonList(workBatch.get());
+            return List.of(workBatch.get());
         }).when(queue).getJobBatches(Mockito.any());
 
     }
